herbstluftwm NEWS -- History of user-visible changes
----------------------------------------------------

See the link:MIGRATION[] file for changes that introduced incompatibility to
older versions.

Current git version
-------------------

  * Bug fixes:
    - When hiding windows, correctly set their WM_STATE to IconicState (we set
      it to Withdrawn state before, which means "unmanaged" and thus is wrong).
      This may require restarting pagers when upgrading hlwm live.

Release 0.9.0 on 2020-10-31
---------------------------

  * When an application fails to focus itself (because
    focus_stealing_prevention is active), then the window is marked as urgent.
  * New optional argument for the 'split' command for splitting non-leaf frames
  * Frame objects: the frame layout can be introspected via the 'tiling' object
    present in each tag, e.g.: 'tags.focus.tiling'.
  * New command 'foreach' for iterating over objects
  * New attribute 'urgent_count' for tags, counting the number of urgent clients on a tag
  * New rule consequence 'floatplacement' that updates the placement of floating
    clients ('floatplacement=smart' for little overlap,
    'floatplacement=center' for centering) or leaves the floating position as
    is ('floatplacement=none')
  * New rule condition 'pgid'
  * New format specifier '%c' in the 'sprintf' command (useful in combination with 'foreach')
  * The 'new_attr' command now also accepts an initial value
  * React to a change of the 'floating_focused' attribute of the tag object
  * New frame index character 'p' for accessing the parent frame
  * Object tree documentation as a json file
  * Bug fixes:
    - Fix wrong behaviour in 'cycle_layout' in the case where the current layout
      is not contained in the layout list passed to 'cycle_layout'.
    - Fix handling of delta -1 in 'focus_monitor' and 'cycle_monitor'
    - Fixed precision decimals in the layout tree (more reliable in- and output
      of fractions in frame splits)